--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'job_list' %}">Vagas</a>
                     </li>
@@ -57,10 +60,22 @@
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Entrar</a>
+                            <a class="btn btn-outline-light me-2" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-primary" href="{% url 'register' %}">Criar Conta</a>
                         </li>
                     {% endif %}
                 </ul>
+                <div class="navbar-nav">
+                    {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'profile' %}">Minha Conta</a>
+                        <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+                    {% else %}
+                        <a class="btn btn-outline-light me-2" href="{% url 'login' %}">Login</a>
+                        <a class="btn btn-primary" href="{% url 'register' %}">Criar Conta</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </nav>
