Atualizado templates base e home

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -17,7 +17,8 @@
                 {% endif %}
             </div>
             <div class="col-lg-6 d-none d-lg-block">
-                <img src="{% static 'img/hero-image.svg' %}" alt="Hero Image" class="img-fluid">
+                <!-- Por enquanto, vamos remover a imagem até termos uma -->
+                <!-- <img src="{% static 'img/hero-image.svg' %}" alt="Hero Image" class="img-fluid"> -->
             </div>
         </div>
     </div>
